src/main/java/org/example/becoco/global/error/CustomExceptionHandler.java
package org.example.becoco.global.error;

import org.example.becoco.global.error.exception.CustomException;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class CustomExceptionHandler {
    @ExceptionHandler(CustomException.class)
    protected ResponseEntity<ErrorResponse> handlerCustomException(CustomException customException){
        return ErrorResponse.responseEntity(customException.getErrorCode());
    }

}
